--- a/commands/k8s/httpd.yml
+++ b/commands/k8s/httpd.yml
@@ -1,1 +1,54 @@
-123
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: httpd-deployment
+  labels:
+    app: httpd
+spec:
+  replicas: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1        
+      maxUnavailable: 0
+  selector:
+    matchLabels:
+      app: httpd
+  template:
+    metadata:
+      labels:
+        app: httpd
+    spec:
+      containers:
+      - name: httpd
+        image: httpd
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: httpdsvc
+  labels:
+    app: httpd
+spec:
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+  selector:
+      app: httpd
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: traefik-ingr
+spec:
+  rules:
+    - host: httpd
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: httpdsvc
+              servicePort: 80
